# opfunu-core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/.github/workflows/: package.yml  publish.yml
.github/workflows/: package.yml  publish.yml  test.yml  type.yml
examples/: basic_use_cases_benchmark.py  basic_use_cases_cec.py  example_with_mealpy.py
opfunu/: __init__.py  benchmark.py
opfunu/benchmark/: __init__.py  cec.py  formula.py  func.py
opfunu/cec_based/: cec.py  cec2005.py  cec2008.py  cec2010.py  cec2013.py  cec2014.py  cec2015.py  cec2017.py  cec2019.py  cec2020.py  cec2021.py  cec2022.py
opfunu/name_based/: a_func.py  b_func.py  c_func.py  d_func.py  e_func.py  f_func.py  g_func.py  h_func.py  i_func.py  j_func.py  k_func.py  l_func.py  m_func.py  n_func.py  o_func.py  p_func.py  q_func.py  r_func.py  s_func.py  t_func.py  u_func.py  v_func.py  w_func.py  x_func.py  y_func.py  z_func.py
opfunu/utils/: latex.py  operator.py  visualize.py
tests/: test_benchmark.py
tests/cec_based/: test_cec2005.py  test_cec2008.py  test_cec2010.py  test_cec2013.py  test_cec2014.py  test_cec2015.py  test_cec2017.py  test_cec2019.py  test_cec2020.py  test_cec2021.py  test_cec2022.py  test_cec_based.py
tests/name_based/: test_a_func.py  test_b_func.py  test_c_func.py  test_d_func.py  test_e_func.py  test_f_func.py  test_g_func.py  test_h_func.py  test_i_func.py
tests/utils/: test_operator.py
