[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opfunu-core"
version = "2.0.0"
description = "Opfunu-core: An Open-source Python Library for Optimization Benchmark Functions"
readme = "README.md"
license = { text = "GPL-3.0-only" }

authors = [
    { name = "Thieu", email = "nguyenthieu2102@gmail.com" }
]

maintainers = [
    { name = "ltsim", email = "tsim@cucei.udg.mx" }
]

keywords = [
    "optimization functions", "test functions", "benchmark functions",
    "mathematical functions", "CEC competitions",
    "CEC-2008", "CEC-2009", "CEC-2010", "CEC-2011", "CEC-2012",
    "CEC-2013", "CEC-2014", "CEC-2015", "CEC-2017", "CEC-2019",
    "CEC-2020", "CEC-2021", "CEC-2022", "soft computing",
    "Stochastic optimization", "Global optimization",
    "Convergence analysis", "Search space exploration",
    "Local search", "Computational intelligence", "Performance analysis",
    "Exploration versus exploitation", "Constrained optimization", "Simulations",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: System :: Benchmark",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.0",
    "matplotlib>=3.8.0",
    "pillow>=10.2.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.9.0",
    "twine>=5.0.0",
    "types-requests>=2.31.0",
    "types-pillow>=10.2.0",
    "matplotlib-stubs>=0.3.11",
]

[project.urls]
"Homepage" = "https://github.com/ltsim/opfunu-core"
"Documentation" = "https://opfunu.readthedocs.io/"
"Source Code" = "https://github.com/ltsim/opfunu-core"
"Bug Tracker" = "https://github.com/ltsim/opfunu-core/issues"
"Change Log" = "https://github.com/ltsim/opfunu-core/blob/master/ChangeLog.md"

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*"]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"

[tool.mypy]
files = ["opfunu"]
exclude = ["tests/", "scripts/", "docs/", "examples/"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = false
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_decorators = false
check_untyped_defs = true
warn_return_any = false
show_error_codes = true
show_column_numbers = true
pretty = true
error_summary = true

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "PIL.*",
    "numpy",
    "numpy.*"
]
ignore_missing_imports = true
